# fitter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  HISTORY.rst  MANIFEST.in  README.rst  fitter.py  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: main.yml  pypi.yml
doc/: Makefile  conf.py  contrib.rst  data.csv  faqs.rst  history.rst  index.rst  references.rst  requirements.txt  tuto.rst
doc/source/: conf.py  contrib.rst  history.rst  index.rst  references.rst
doc/source/_static/: copybutton.js
src/: __init__.py  fitter.py
src/fitter/: __init__.py  fitter.py  histfit.py  main.py
src/fitter.egg-info/: PKG-INFO  SOURCES.txt
test/: run_tests.py  test_fitter.py  test_histfit.py  test_main.py
