[tool.poetry]
name = "fitter"
version = "1.7.1"
description = "A tool to fit data to many distributions and get the best one(s)"
authors = ["Thomas Cokelaer <cokelaer@gmail.com>"]
license = "GPL"
readme = "README.rst"
keywords = ["fit", "distribution", "fitting", "scipy"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]



[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
joblib = "^1.3.1"
matplotlib = "^3.7.2"
numpy = "^1.20.0"
pandas = ">= 0.23.4, <3.0.0"
scipy = ">=0.18.0, <2.0.0"
tqdm = "^4.65.1"
loguru = "^0.7.2"
rich-click = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
pytest-mock = "^3.11.1"
pytest-timeout = "^1"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fitter = "fitter.main:main"


