[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "fitter"
version = "1.8.0"
description = "A tool to fit data to many distributions and get the best one(s)"
authors = [{name="Thomas Cokelaer", email="cokelaer@gmail.com"}]
license = "GPL"
repository = "https://github.com/cokelaer/fitter"
readme = "README.rst"
keywords = ["fit", "distribution", "fitting", "scipy"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

packages = [
    { include = "fitter" }
]

requires-python = ">=3.10,<4.0"
dependencies = [
    "click >=8.3.0",
    "joblib >= 1.5.2",
    "matplotlib >= 3.10.7",
    "numpy >= 2.2.6",
    "pandas >= 2.3.3",
    "scipy >= 1.13",
    "tqdm >= 4.67.1",
    "loguru >=0.7.3",
    "rich-click >=1.9.3",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.15.1"
pytest-timeout = "^2.4.0"
coveralls = ">=4.1.0,<5.0.0"

[project.scripts]
fitter = "fitter.main:main"


